[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-mockito"
version = "0.0.4"
description = "Base fixtures for mockito"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "herr kaste", email = "herr.kaste@gmail.com" },
]
dependencies = [
  "pytest>=6",
  "mockito>=1.0.6",
]

[project.urls]
Homepage = "https://github.com/kaste/pytest-mockito"

[project.entry-points.pytest11]
mockito = "pytest_mockito.plugin"

[tool.uv]
package = true

[dependency-groups]
dev = ["pytest"]

